# dnd5e-srd-rag

./: .env.example  .gitignore  LICENSE  NOTICE.md  README.md  TIPS.md  pyproject.toml  todo.md
scripts/: annotate_sections.py  ask.py  ask_ollama_llm.py  chunk_pages.py  index_chunks.py  ingest_pdf.py  inspect_chunks.py  inspect_pages.py  search.py  test_embeddings.py
src/: config.py  pdf_extract.py
src/dnd5e_srd_rag/: __init__.py  api.py  chat_service.py  chunking.py  config.py  embeddings.py  jsonl.py  ollama_answer.py  pdf_extract.py  retrieval.py  section_map.py  sections.py  vector_store.py
src/dnd5e_srd_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test.json  test_api.py  test_chat_service.py  test_chunking.py  test_ollama_answer.py  test_retrieval.py  test_sections.py  test_vector_store.py
