[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dnd5e-srd-rag"
version = "0.1.0"
description = "A minimal RAG project for D&D SRD v5.2.1 rules question answering."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "dnd5e-srd-rag contributors" }
]
dependencies = [
  "chromadb>=0.5",
  "pymupdf>=1.24",
  "python-dotenv>=1.0",
  "sentence-transformers>=3.0",
  "transformers>=4.51.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.urls]
Source = "https://github.com/"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
